# calsync

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: android-build-release-matrix.yml  android-build-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/top/stevezmt/calsync/: AboutActivity.kt  CalendarHelper.kt  DateTimeParser.kt  NotificationProcessor.kt  NotificationUtils.kt  ParsingEngines.kt  SettingsActivity.kt  SettingsStore.kt
app/src/main/java/top/stevezmt/calsync/llm/: LlamaCpp.kt
app/src/main/res/layout/: activity_settings.xml
app/src/test/java/top/stevezmt/calsync/: DateTimeParserTest.kt  DeepSeekConnectionTest.kt
gradle/: libs.versions.toml
